adding a h2 to search

--- a/index.html
+++ b/index.html
@@ -13,12 +13,21 @@
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap"
       rel="stylesheet"
     />
+    <meta
+      name="description"
+      content="Ria sem parar com as melhores piadas! Encontre piadas engraçadas e divertidas para alegrar o seu dia."
+    />
+    <meta
+      name="keywords"
+      content="piadas, piadas engraçadas, piadas curtas, humor, diversão, site piadas, site de piadas"
+    />
   </head>
   <body>
     <div class="wrapper">
       <header class="bg-dark text-white text-center py-5">
-        <h1 class="display-4">Só Piadas</h1>
-        <p class="lead">Ria sem parar com as melhores piadas!</p>
+        <h1>As Melhores Piadas</h1>
+        <h2>Piadas Curtas</h2>
+        <h2>Piadas Engraçadas</h2>
       </header>
 
       <main class="container my-5">
